--- a/src/app/modules/public/mainPublic.html
+++ b/src/app/modules/public/mainPublic.html
@@ -1,25 +1,24 @@
 <div class="zone1">
     <div class="valign-wrapper">
-        <div class="valign">
+        <div class="valign">        
             <div class="row">
-                <div class="col s12 center-align">
-                    <img src="assets/images/logo-mini.png" class="responsive-img"/>
-                    <div class="row">
-                        <div class="col s12">
-                            <div class="center-align">
-                                <h2 class="header col s12 white-text" translate="landing.main-title"></h2>
-                                <p class="text-white center">
-                                    <a href="https://play.google.com/apps/testing/com.qaobee.hand" target="_blank"
-                                       class="waves-effect waves-white secondary-color btn btn-flat btn-sm">
-                                        <i class="fa fa-android fa-fw fa-2x"></i> {{ 'landing.calltoaction' |
-                                        translate}}
-                                    </a></p>
-                            </div>
-                        </div>
-                    </div>
+                <div class="col s12">
+                    <h2 class="center-align col s12 white-text " translate="landing.main-title"></h2>
                 </div>
             </div>
-        </div>
+            <div class="row"><div class="col s4 ">&nbsp;</div></div>
+            <div class="row"><div class="col s4 ">&nbsp;</div></div>
+            <div class="row">
+                <div class="col s4 ">&nbsp;</div>
+                <div class="col s4 center accent-color">
+                    <a href="https://play.google.com/apps/testing/com.qaobee.hand" target="_blank"
+                       class="white-text">
+                        <h4 translate="landing.calltoaction"></h4>
+                    </a>
+                </div>
+                <div class="col s4 ">&nbsp;</div>
+            </div>
+        </div>  
     </div>
 </div>
 <div class="home section" id="concept">
@@ -53,10 +52,13 @@
 <div class="home section container">
     <div class="row">
         <div class="col s12 l7">
-            <div class="row"> 
+            <div class="row">
                 <div class="col s4">
-                    <img src="../../../assets/images/icons/pricing-mobile-M.png" width="90%" height="90%" class="hide-on-med-and-up">
-                    <img src="../../../assets/images/icons/pricing-mobile-M.png" class="hide-on-small-only">
+                    <ul class="icon-conceptH">
+                        <li>
+                            <i class="fa fa-mobile fa-fw white-text"></i>
+                        </li>
+                    </ul>
                 </div>
                 <div class="col s8 left-align secondary-text-color">
                     <h4>{{'pricing.offers.standard.appMob' | translate}}</h4>
@@ -67,8 +69,11 @@
             </div>
             <div class="row">    
                 <div class="col s4">
-                    <img src="../../../assets/images/icons/pricing-eye-M.png" width="75%" height="75%" class="hide-on-med-and-up">
-                    <img src="../../../assets/images/icons/pricing-eye-M.png" class="hide-on-small-only">
+                    <ul class="icon-concept">
+                        <li>
+                            <i class="fa fa-eye fa-fw white-text"></i>
+                        </li>
+                    </ul>
                 </div>
                 <div class="col s8 left-align">    
                     <h5>{{'pricing.offers.standard.collectMob.title' | translate}}</h5>
@@ -77,8 +82,11 @@
             </div>
             <div class="row">
                 <div class="col s4">
-                    <img src="../../../assets/images/icons/pricing-stats-M.png" width="75%" height="75%" class="hide-on-med-and-up">
-                    <img src="../../../assets/images/icons/pricing-stats-M.png" class="hide-on-small-only">
+                    <ul class="icon-concept">
+                        <li>
+                            <i class="fa fa-bar-chart fa-fw white-text"></i>
+                        </li>
+                    </ul>
                 </div>
                 <div class="col s8 left-align">
                     <h5>{{'pricing.offers.standard.statsMob.title' | translate}}</h5>
@@ -136,8 +144,11 @@
         <div class="col s12 l7">
             <div class="row"> 
                 <div class="col s4">
-                    <img src="../../../assets/images/icons/pricing-http-M.png" width="90%" height="90%" class="hide-on-med-and-up">
-                    <img src="../../../assets/images/icons/pricing-http-M.png" class="hide-on-small-only">
+                    <ul class="icon-conceptH">
+                        <li>
+                            <i class="fa fa-desktop fa-fw white-text"></i>
+                        </li>
+                    </ul>
                 </div>
                 <div class="col s8 left-align secondary-text-color">
                     <h4>{{'pricing.offers.standard.appWeb' | translate}}</h4>
@@ -149,8 +160,11 @@
 
             <div class="row">
                 <div class="col s4">
-                    <img src="../../../assets/images/icons/pricing-teams-M.png" width="75%" height="75%" class="hide-on-med-and-up">
-                    <img src="../../../assets/images/icons/pricing-teams-M.png" class="hide-on-small-only">
+                    <ul class="icon-concept">
+                        <li>
+                            <i class="fa fa-user fa-fw white-text"></i>
+                        </li>
+                    </ul>
                 </div>
                 <div class="col s8 left-align">
                     <h5>{{'pricing.offers.standard.teamWeb.title' | translate}}</h5>
@@ -159,8 +173,11 @@
             </div>
             <div class="row">    
                 <div class="col s4">
-                    <img src="../../../assets/images/icons/pricing-agenda-M.png" width="75%" height="75%" class="hide-on-med-and-up">
-                    <img src="../../../assets/images/icons/pricing-agenda-M.png" class="hide-on-small-only">
+                    <ul class="icon-concept">
+                        <li>
+                            <i class="fa fa-calendar fa-fw white-text"></i>
+                        </li>
+                    </ul>
                 </div>
                 <div class="col s8 left-align">    
                     <h5>{{'pricing.offers.standard.agendaWeb.title' | translate}}</h5>
@@ -169,8 +186,11 @@
             </div>
             <div class="row">
                 <div class="col s4">
-                    <img src="../../../assets/images/icons/pricing-stats-M.png" width="75%" height="75%" class="hide-on-med-and-up">
-                    <img src="../../../assets/images/icons/pricing-stats-M.png" class="hide-on-small-only">
+                    <ul class="icon-concept">
+                        <li>
+                            <i class="fa fa-bar-chart fa-fw white-text"></i>
+                        </li>
+                    </ul>
                 </div>
                 <div class="col s8 left-align">
                     <h5>{{'pricing.offers.standard.statsWeb.title' | translate}}</h5>
@@ -200,25 +220,47 @@
         </div>
         <div class="row"><div class="col s12">&nbsp;</div></div>
     </div>
-    <div class="row"> 
-        <div class="col s4 m2">
-            <i class="material-icons md-60">share</i>
-        </div>
-        <div class="col s8 m10 left-align secondary-text-color">
-            <h4>{{'pricing.offers.standard.shareWeb.title' | translate}}</h4>
-        </div>
-
-        <div class="col s4 m2">&nbsp;</div>
-        <div class="col s8 m10 secondary-text-color"><hr></div>
-    </div>
     <div class="row">
-        <div class="col s4 m2">&nbsp;</div>
-        <div class="col s8 m10">
-            <h5>{{'pricing.offers.standard.shareWeb.detail' | translate}}</h5>
-            <span class="light-text-color">{{'pricing.offers.standard.statsWeb.detail' | translate}}</span>
+        
+        <div class="col s12 l7">
+            <div class="row"> 
+                <div class="col s4">
+                    <ul class="icon-conceptH">
+                        <li>
+                            <i class="fa fa-users fa-fw white-text"></i>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col s8 left-align accent-text-color">
+                    <h4>{{'pricing.offers.standard.shareWeb.title' | translate}}</h4>
+                </div>
+
+                <div class="col s4">&nbsp;</div>
+                <div class="col s8 secondary-text-color"><hr></div>
+            </div>
+
+            <div class="row">
+                <div class="col s4">
+                    <ul class="icon-concept">
+                        <li>
+                            <i class="fa fa-share-alt fa-fw white-text"></i>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col s8 left-align">
+                    <h5>{{'pricing.offers.standard.shareWeb.detail' | translate}}</h5>
+            <span class="light-text-color">{{'pricing.offers.standard.shareWeb.detail2' | translate}}</span>
+                </div>
+            </div>
+            
         </div>
+        
+        <div class="col l5 s12">
+            <div class="row hide-on-small-only">&nbsp;</div>
+            <div class="row hide-on-small-only">&nbsp;</div>
+        </div>
+        
     </div>
-    
 </div>
 
 <div class="zone3">
