--- a/src/app/modules/public/mainPublic.html
+++ b/src/app/modules/public/mainPublic.html
@@ -208,10 +208,10 @@
                 <div class="upper">
                     <slide-wrapper arrows="false">
                         <ul class="slide screenshot">
-                            <li><img src="assets/images/handball/webscsh01.png" class="responsive-img"></li>
-                            <li><img src="assets/images/handball/webscsh01.png" class="responsive-img"></li>
-                            <li><img src="assets/images/handball/webscsh01.png" class="responsive-img"></li>
-                            <li><img src="assets/images/handball/webscsh01.png" class="responsive-img"></li>
+                            <li><img src="assets/images/handball/scshWeb08.png" class="responsive-img"></li>
+                            <li><img src="assets/images/handball/scshWeb03.png" class="responsive-img"></li>
+                            <li><img src="assets/images/handball/scshWeb04.png" class="responsive-img"></li>
+                            <li><img src="assets/images/handball/scshWeb06.png" class="responsive-img"></li>
                         </ul>
                     </slide-wrapper>
                 </div>
@@ -257,7 +257,7 @@
         
         <div class="col l5 s12">
             <div class="row hide-on-small-only">&nbsp;</div>
-            <div class="row hide-on-small-only">&nbsp;</div>
+            <img src="assets/images/handball/scshWeb01.png" class="responsive-img">
         </div>
         
     </div>
@@ -287,21 +287,6 @@
         </div>
     </div>
 </div>
-
-<div class="home section container" >
-    <div class="row">        
-        <div class="col s12">
-            <h3 class="left-align accent-text-color" translate="landing.part-2.title"></h3>
-            <h5 translate="landing.area-3.item-1.title"></h5>
-            <p class="light-text-color" translate="landing.area-3.item-1.content"></p>
-            <h5 translate="landing.area-3.item-2.title"></h5>
-            <p class="light-text-color" translate="landing.area-3.item-2.content"></p>
-            <h5 translate="landing.area-3.item-3.title"></h5>
-            <p class="light-text-color" translate="landing.area-3.item-3.content"></p>
-        </div>
-    </div>
-</div>
-
 <div class="home section dark-primary-color" id="download">
     <!--   Icon Section   -->
     <div class="row">
