--- a/src/app/modules/public/mainPublic.html
+++ b/src/app/modules/public/mainPublic.html
@@ -4,6 +4,7 @@
             <div class="row">
                 <div class="col s12">
                     <h2 class="center-align col s12 white-text " translate="landing.main-title"></h2>
+                    <h5 class="center-align col s12 white-text " translate="landing.sub-title"></h5>
                 </div>
             </div>
             <div class="row"><div class="col s4 ">&nbsp;</div></div>
@@ -291,7 +292,7 @@
     <!--   Icon Section   -->
     <div class="row">
         <div class="col s12 center-align">
-            <h4 class="white-text" translate="landing.area-3.item-0.title"></h4>
+            <h4 class="white-text" translate="landing.calltoaction"></h4>
             <p  class="center-align container"translate="landing.area-3.item-0.content"></p>
             <div class="row">
                 <div class="col s12 m6 center">
