--- a/src/app/components/directives/commons/headerMenu/headerMenu.html
+++ b/src/app/components/directives/commons/headerMenu/headerMenu.html
@@ -40,10 +40,10 @@
 
                 <ul id="nav-mobileHC" class="side-nav dark-primary-color">
                     <li ng-class="{'active' : menuItem === 'concept'}">
-                        <a class="white-text" href="#/concept" translate="navbar.concept"></a>
+                        <a href="" class="white-text" translate="navbar.concept" ng-click="gotoAnchor('concept')"></a>
                     </li>
-                    <li ng-class="{'active' : menuItem === 'about'}">
-                        <a class="white-text" href="#/about" translate="landing.contact.about"></a>
+                    <li ng-class="{'active' : menuItem === 'download'}">
+                        <a href="" class="white-text" translate="navbar.download" ng-click="gotoAnchor('download')"></a>
                     </li><!--
                 <li ng-class="{'active' : menuItem === 'contact'}">
                     <a class="white-text" href="#/contact" translate="navbar.contact"></a>
@@ -51,7 +51,10 @@
                 <li ng-class="{'active' : menuItem === 'pricing'}" ng-if="!isProd">
                     <a class="white-text" href="#/pricing" translate="navbar.pricing"></a>
                 </li>-->
-
+                    <li>
+                        <a class="waves-effect waves-white secondary-color" ng-click="openSignup()"
+                           translate="navbar.signup"></a>
+                    </li>
                     <li>
                         <a class="white-text" ng-click="openLogin()" translate="navbar.connect"></a>
                     </li>
