--- a/src/app/modules/public/mainPublic.html
+++ b/src/app/modules/public/mainPublic.html
@@ -2,19 +2,27 @@
     <div class="valign-wrapper">
         <div class="valign">        
             <div class="row">
-                <div class="col s12">
-                    <h2 class="center-align col s12 white-text " translate="landing.main-title"></h2>
-                    <h5 class="center-align col s12 white-text " translate="landing.sub-title"></h5>
+                <div class="col s12 hide-on-med-and-down">
+                    
+                    <h2 class="center-align col s12 white-text" translate="landing.main-title"></h2>
+                    
+                    <h5 class="center-align col s12 white-text" translate="landing.sub-title"></h5>
+                </div>
+                <div class="col s12 hide-on-large-only">
+                    
+                    <h4 class="center-align col s12 white-text" translate="landing.main-title"></h4>
+                    
+                    <h6 class="center-align col s12 white-text" translate="landing.sub-title"></h6>
                 </div>
             </div>
-            <div class="row"><div class="col s4 ">&nbsp;</div></div>
-            <div class="row"><div class="col s4 ">&nbsp;</div></div>
+            <div class="row"><div class="col s4 hide-on-med-and-down">&nbsp;</div></div>
+            <div class="row"><div class="col s4 hide-on-med-and-down">&nbsp;</div></div>
             <div class="row">
                 <div class="col s4 ">&nbsp;</div>
                 <div class="col s4 center accent-color">
                     <a href="https://play.google.com/apps/testing/com.qaobee.hand" target="_blank"
                        class="white-text">
-                        <h4 translate="landing.calltoaction"></h4>
+                        <h5 translate="landing.calltoaction"></h5>
                     </a>
                 </div>
                 <div class="col s4 ">&nbsp;</div>
@@ -116,31 +124,32 @@
                 </div>
             </div>
         </div>
-            <!--
-             <div class="row">
-                <div class="col s4">
-                    <img src="../../../assets/images/icons/pricing-teams-M.png" width="75%" height="75%" class="hide-on-med-and-up">
-                    <img src="../../../assets/images/icons/pricing-teams-M.png" class="hide-on-small-only">
-                </div>
-                <div class="col s8 left-align">
-                    <h5>{{'pricing.offers.standard.teamMob.title' | translate}}</h5>
-                    <span>{{'pricing.offers.standard.teamMob.detail' | translate}}</span>
-                </div>
-            </div>
-            <div class="row">    
-                <div class="col s4">
-                    <img src="../../../assets/images/icons/pricing-agenda-M.png" width="75%" height="75%" class="hide-on-med-and-up">
-                    <img src="../../../assets/images/icons/pricing-agenda-M.png" class="hide-on-small-only">
-                </div>
-                <div class="col s8 left-align">    
-                    <h5>{{'pricing.offers.standard.agendaMob.title' | translate}}</h5>
-                    <span>{{'pricing.offers.standard.agendaMob.detail' | translate}}</span>
-                </div>
-            </div>
-            -->
-            
     </div>
-    <div class="row">&nbsp;</div>
+</div>
+    <div class="home section container dark-primary-color" id="download">
+        <!--   Icon Section   -->
+        <div class="row">
+            <div class="col s12 center-align">
+                <h3  translate="landing.area-3.item-0.title"></h3>
+                <p  class="center-align container"translate="landing.area-3.item-0.content"></p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col s12 m6 center">
+                <a href="https://play.google.com/apps/testing/com.qaobee.hand" target="_blank" class="light-text-color">
+                    <i class="fa fa-android fa-fw fa-5x accent-text-color"></i><br/>
+                    {{ 'landing.area-4.android' | translate}}
+                </a>
+            </div>
+            <div class="col s12 m6 center">
+                <span class="light-text-color">
+                    <i class="fa fa-apple fa-fw fa-5x light-text-color"></i><br/>
+                    {{ 'landing.area-4.iphone' | translate}}
+                </span>
+            </div>
+        </div>
+    </div>
+<div class="home section container">
     <div class="row">
         <div class="col s12 l7">
             <div class="row"> 
@@ -263,52 +272,37 @@
         
     </div>
 </div>
-
+<!--
 <div class="zone3">
     <div class="valign-wrapper">
         <div class="valign">
             <div class="row">
-                <div class="col s12 center-align">
-                    <img src="assets/images/logo-mini.png" class="responsive-img"/>
-                    <div class="row">
-                        <div class="col s12">
-                            <div class="center-align">
-                                <h2 class="header col s12 white-text" translate="landing.main-title"></h2>
-                                <p class="text-white center">
-                                    <a href="https://play.google.com/apps/testing/com.qaobee.hand" target="_blank"
-                                       class="waves-effect waves-white secondary-color btn btn-flat btn-sm">
-                                        <i class="fa fa-android fa-fw fa-2x"></i> {{ 'landing.calltoaction' |
-                                        translate}}
-                                    </a></p>
-                            </div>
-                        </div>
-                    </div>
+                <div class="col s12 hide-on-med-and-down">
+                    
+                    <h2 class="center-align col s12 white-text" translate="landing.main-title"></h2>
+                    
+                    <h5 class="center-align col s12 white-text" translate="landing.sub-title"></h5>
+                </div>
+                <div class="col s12 hide-on-large-only">
+                    
+                    <h4 class="center-align col s12 white-text" translate="landing.main-title"></h4>
+                    
+                    <h6 class="center-align col s12 white-text" translate="landing.sub-title"></h6>
                 </div>
             </div>
-        </div>
-    </div>
-</div>
-<div class="home section dark-primary-color" id="download">
-    <!--   Icon Section   -->
-    <div class="row">
-        <div class="col s12 center-align">
-            <h4 class="white-text" translate="landing.calltoaction"></h4>
-            <p  class="center-align container"translate="landing.area-3.item-0.content"></p>
+            <div class="row"><div class="col s4 hide-on-med-and-down">&nbsp;</div></div>
+            <div class="row"><div class="col s4 hide-on-med-and-down">&nbsp;</div></div>
             <div class="row">
-                <div class="col s12 m6 center">
+                <div class="col s4 ">&nbsp;</div>
+                <div class="col s4 center accent-color">
                     <a href="https://play.google.com/apps/testing/com.qaobee.hand" target="_blank"
                        class="white-text">
-                        <i class="fa fa-android fa-fw fa-4x accent-text-color"></i><br/>
-                        {{ 'landing.area-4.android' | translate}}
+                        <h5 translate="landing.calltoaction"></h5>
                     </a>
                 </div>
-                <div class="col s12 m6 center">
-                    <a href="#" target="_blank" class="light-text-color">
-                        <i class="fa fa-apple fa-fw fa-4x accent-text-color"></i><br/>
-                        {{ 'landing.area-4.iphone' | translate}}
-                    </a>
-                </div>
+                <div class="col s4 ">&nbsp;</div>
             </div>
         </div>
     </div>
 </div>
+-->
