--- a/src/app/modules/home/mainHome.html
+++ b/src/app/modules/home/mainHome.html
@@ -18,11 +18,11 @@
             <widget-calendar meta="meta" user="user" ></widget-calendar>
         </div>
         
-        <div class="col s12">
+        <div class="col s12 l6">
             <widget-podium meta="meta" user="user" indicator="goalScored" nbitem="10" stataggregat="COUNT" ></widget-podium>
         </div>
     
-        <div class="col s12">
+        <div class="col s12 l6">
             <widget-podium meta="meta" user="user" indicator="playTime" nbitem="10" stataggregat="SUM" ></widget-podium>
         </div>
         
