--- a/src/app/modules/public/mainPublic.html
+++ b/src/app/modules/public/mainPublic.html
@@ -34,23 +34,23 @@
     <!--   Icon Section   -->
     <div class="row">
         <div class="col s12">
-            <h3 class="center accent-text-color" translate="landing.part-2.title"></h3>
+            <h3 class="center accent-text-color" translate="landing.concept.title"></h3>
             <p>&nbsp;</p>
             <ul class="icon-block">
                 <li>
                     <i class="fa fa-fw fa-eye accent-text-color"></i>
-                    <h3 translate="landing.part-2.capture" class="hide-on-small-only"></h3>
-                    <h5 translate="landing.part-2.capture" class="hide-on-med-and-up"></h5>
+                    <h3 translate="landing.concept.capture" class="hide-on-small-only"></h3>
+                    <h5 translate="landing.concept.capture" class="hide-on-med-and-up"></h5>
                 </li>
                 <li>
                     <i class="fa fa-fw fa-bar-chart accent-text-color"></i>
-                    <h3 translate="landing.part-2.analyze" class="hide-on-small-only"></h3>
-                    <h5 translate="landing.part-2.analyze" class="hide-on-med-and-up"></h5>
+                    <h3 translate="landing.concept.analyze" class="hide-on-small-only"></h3>
+                    <h5 translate="landing.concept.analyze" class="hide-on-med-and-up"></h5>
                 </li>
                 <li>
                     <i class="fa fa-fw fa-flag accent-text-color"></i>
-                    <h3 translate="landing.part-2.progress" class="hide-on-small-only"></h3>
-                    <h5 translate="landing.part-2.progress" class="hide-on-med-and-up"></h5>
+                    <h3 translate="landing.concept.progress" class="hide-on-small-only"></h3>
+                    <h5 translate="landing.concept.progress" class="hide-on-med-and-up"></h5>
                 </li>
             </ul>
 
@@ -70,7 +70,7 @@
                     </ul>
                 </div>
                 <div class="col s8 left-align secondary-text-color">
-                    <h4>{{'pricing.offers.standard.appMob' | translate}}</h4>
+                    <h4 translate="pricing.offers.standard.appMob"></h4>
                 </div>
 
                 <div class="col s4">&nbsp;</div>
@@ -85,8 +85,8 @@
                     </ul>
                 </div>
                 <div class="col s8 left-align">    
-                    <h5>{{'pricing.offers.standard.collectMob.title' | translate}}</h5>
-                    <span class="light-text-color">{{'pricing.offers.standard.collectMob.detail' | translate}}</span>
+                    <h5 translate="pricing.offers.standard.collectMob.title"></h5>
+                    <span class="light-text-color" translate="pricing.offers.standard.collectMob.detail"></span>
                 </div>
             </div>
             <div class="row">
@@ -98,8 +98,8 @@
                     </ul>
                 </div>
                 <div class="col s8 left-align">
-                    <h5>{{'pricing.offers.standard.statsMob.title' | translate}}</h5>
-                    <span class="light-text-color">{{'pricing.offers.standard.statsMob.detail' | translate}}</span>
+                    <h5 translate="pricing.offers.standard.statsMob.title"></h5>
+                    <span class="light-text-color" translate="pricing.offers.standard.statsMob.detail"></span>
                 </div>
             </div>
         </div>
@@ -161,7 +161,7 @@
                     </ul>
                 </div>
                 <div class="col s8 left-align secondary-text-color">
-                    <h4>{{'pricing.offers.standard.appWeb' | translate}}</h4>
+                    <h4 translate="pricing.offers.standard.appWeb"></h4>
                 </div>
 
                 <div class="col s4">&nbsp;</div>
@@ -177,8 +177,8 @@
                     </ul>
                 </div>
                 <div class="col s8 left-align">
-                    <h5>{{'pricing.offers.standard.teamWeb.title' | translate}}</h5>
-                    <span class="light-text-color">{{'pricing.offers.standard.teamWeb.detail' | translate}}</span>
+                    <h5 translate="pricing.offers.standard.teamWeb.title"></h5>
+                    <span class="light-text-color" translate="pricing.offers.standard.teamWeb.detail"></span>
                 </div>
             </div>
             <div class="row">    
@@ -190,8 +190,8 @@
                     </ul>
                 </div>
                 <div class="col s8 left-align">    
-                    <h5>{{'pricing.offers.standard.agendaWeb.title' | translate}}</h5>
-                    <span class="light-text-color">{{'pricing.offers.standard.agendaWeb.detail' | translate}}</span>
+                    <h5 translate="pricing.offers.standard.agendaWeb.title"></h5>
+                    <span class="light-text-color" translate="pricing.offers.standard.agendaWeb.detail"></span>
                 </div>
             </div>
             <div class="row">
@@ -203,8 +203,8 @@
                     </ul>
                 </div>
                 <div class="col s8 left-align">
-                    <h5>{{'pricing.offers.standard.statsWeb.title' | translate}}</h5>
-                    <span class="light-text-color">{{'pricing.offers.standard.statsWeb.detail' | translate}}</span>
+                    <h5 translate="pricing.offers.standard.statsWeb.title"></h5>
+                    <span class="light-text-color" translate="pricing.offers.standard.statsWeb.detail"></span>
                 </div>
             </div>    
             
@@ -242,7 +242,7 @@
                     </ul>
                 </div>
                 <div class="col s8 left-align accent-text-color">
-                    <h4>{{'pricing.offers.standard.shareWeb.title' | translate}}</h4>
+                    <h4 translate="pricing.offers.standard.shareWeb.title"></h4>
                 </div>
 
                 <div class="col s4">&nbsp;</div>
@@ -258,8 +258,8 @@
                     </ul>
                 </div>
                 <div class="col s8 left-align">
-                    <h5>{{'pricing.offers.standard.shareWeb.detail' | translate}}</h5>
-            <span class="light-text-color">{{'pricing.offers.standard.shareWeb.detail2' | translate}}</span>
+                    <h5 translate="pricing.offers.standard.shareWeb.detail"></h5>
+            <span class="light-text-color" translate="pricing.offers.standard.shareWeb.detail2"></span>
                 </div>
             </div>
             
