--- a/src/app/modules/public/mainPublic.html
+++ b/src/app/modules/public/mainPublic.html
@@ -27,9 +27,27 @@
                 </div>
                 <div class="col s4 ">&nbsp;</div>
             </div>
+            <div class="row">
+                <div class="valign-wrapper col s12">
+                    <ul class="social-icons">
+                        <li><a href="https://twitter.com/Qaobee" target="_blank" class="white-text"><i
+                                class="fa fa-twitter-square fa-fw"></i><br/>Twitter</a></li>
+                        <li><a href="https://www.facebook.com/qaobee" target="_blank" class="white-text"><i
+                                class="fa fa-facebook-square fa-fw"></i><br/>Facebook</a></li>
+                        <li><a href="https://plus.google.com/+Qaobee/about" target="_blank" class="white-text"><i
+                                class="fa fa-google-plus-square fa-fw"></i><br/>Google +</a></li>
+                        <li><a href="mailto:contact@qaobee.com" class="white-text"><i
+                                class="fa fa-envelope-square fa-fw"></i><br/>E-mail</a></li>
+                        <li><a href="javascript:void(0);" data-target="modalSubMailingList" class="white-text"><i
+                                class="fa fa-fw fa-pencil-square"></i><br/>Newsletter</a></li>
+                    </ul>
+
+                </div>
+            </div>
         </div>  
     </div>
 </div>
+
 <div class="home section" id="concept">
     <!--   Icon Section   -->
     <div class="row">
@@ -60,7 +78,7 @@
 </div>
 <div class="home section container">
     <div class="row">
-        <div class="col s12 l7">
+        <div class="col s12 l8">
             <div class="row">
                 <div class="col s4">
                     <ul class="icon-conceptH">
@@ -73,8 +91,12 @@
                     <h4 translate="pricing.offers.standard.appMob"></h4>
                 </div>
 
-                <div class="col s4">&nbsp;</div>
-                <div class="col s8 secondary-text-color"><hr></div>
+                <div class="col s12 secondary-text-color"><hr></div>
+            </div>
+            <div class="row">    
+                <div class="col s12 left-align">    
+                    <span class="accent-text-color" translate="pricing.offers.standard.collectMob.intro"></span>
+                </div>
             </div>
             <div class="row">    
                 <div class="col s4">
@@ -103,7 +125,7 @@
                 </div>
             </div>
         </div>
-        <div class="col s12 l5">    
+        <div class="col s12 l4">    
             <div class="row">
                 <div class="col s12 center-align">
                     <!-- <div class="home-bg1 hidden" when-visible="animateElementIn"
@@ -138,20 +160,20 @@
             <div class="col s12 m6 center">
                 <a href="https://play.google.com/apps/testing/com.qaobee.hand" target="_blank" class="light-text-color">
                     <i class="fa fa-android fa-fw fa-5x accent-text-color"></i><br/>
-                    {{ 'landing.area-4.android' | translate}}
+                    <span class="white-text" translate="landing.area-4.android"></span>
                 </a>
             </div>
             <div class="col s12 m6 center">
                 <span class="light-text-color">
                     <i class="fa fa-apple fa-fw fa-5x light-text-color"></i><br/>
-                    {{ 'landing.area-4.iphone' | translate}}
+                    <span translate="landing.area-4.iphone"></span>
                 </span>
             </div>
         </div>
     </div>
 <div class="home section container">
     <div class="row">
-        <div class="col s12 l7">
+        <div class="col s12 l8">
             <div class="row"> 
                 <div class="col s4">
                     <ul class="icon-conceptH">
@@ -161,11 +183,16 @@
                     </ul>
                 </div>
                 <div class="col s8 left-align secondary-text-color">
-                    <h4 translate="pricing.offers.standard.appWeb"></h4>
+                    <h4 translate="pricing.offers.standard.appWeb.title"></h4>
                 </div>
 
-                <div class="col s4">&nbsp;</div>
-                <div class="col s8 secondary-text-color"><hr></div>
+                <div class="col s12 secondary-text-color"><hr></div>
+            </div>
+
+            <div class="row">    
+                <div class="col s12 left-align">    
+                    <span class="accent-text-color" translate="pricing.offers.standard.appWeb.intro"></span>
+                </div>
             </div>
 
             <div class="row">
@@ -181,19 +208,7 @@
                     <span class="light-text-color" translate="pricing.offers.standard.teamWeb.detail"></span>
                 </div>
             </div>
-            <div class="row">    
-                <div class="col s4">
-                    <ul class="icon-concept">
-                        <li>
-                            <i class="fa fa-calendar fa-fw white-text"></i>
-                        </li>
-                    </ul>
-                </div>
-                <div class="col s8 left-align">    
-                    <h5 translate="pricing.offers.standard.agendaWeb.title"></h5>
-                    <span class="light-text-color" translate="pricing.offers.standard.agendaWeb.detail"></span>
-                </div>
-            </div>
+            
             <div class="row">
                 <div class="col s4">
                     <ul class="icon-concept">
@@ -211,7 +226,7 @@
             <div class="row"><div class="col s12">&nbsp;</div></div>
         </div>
         
-        <div class="col l5 s12">
+        <div class="col l4 s12">
             <div class="row hide-on-small-only">&nbsp;</div>
             <div class="row hide-on-small-only">&nbsp;</div>
             <div class="laptop">
@@ -232,7 +247,7 @@
     </div>
     <div class="row">
         
-        <div class="col s12 l7">
+        <div class="col s12 l8">
             <div class="row"> 
                 <div class="col s4">
                     <ul class="icon-conceptH">
@@ -241,12 +256,17 @@
                         </li>
                     </ul>
                 </div>
-                <div class="col s8 left-align accent-text-color">
+                <div class="col s8 left-align secondary-text-color">
                     <h4 translate="pricing.offers.standard.shareWeb.title"></h4>
                 </div>
 
-                <div class="col s4">&nbsp;</div>
-                <div class="col s8 secondary-text-color"><hr></div>
+                <div class="col s12 secondary-text-color"><hr></div>
+            </div>
+            
+            <div class="row">    
+                <div class="col s12 left-align">    
+                    <span class="accent-text-color" translate="pricing.offers.standard.shareWeb.intro"></span>
+                </div>
             </div>
 
             <div class="row">
@@ -265,44 +285,33 @@
             
         </div>
         
-        <div class="col l5 s12">
+        <div class="col l4 s12">
+            <div class="row hide-on-small-only">&nbsp;</div>
+            
             <div class="row hide-on-small-only">&nbsp;</div>
             <img src="assets/images/handball/scshWeb01.png" class="responsive-img">
         </div>
         
     </div>
 </div>
-<!--
-<div class="zone3">
-    <div class="valign-wrapper">
-        <div class="valign">
-            <div class="row">
-                <div class="col s12 hide-on-med-and-down">
-                    
-                    <h2 class="center-align col s12 white-text" translate="landing.main-title"></h2>
-                    
-                    <h5 class="center-align col s12 white-text" translate="landing.sub-title"></h5>
-                </div>
-                <div class="col s12 hide-on-large-only">
-                    
-                    <h4 class="center-align col s12 white-text" translate="landing.main-title"></h4>
-                    
-                    <h6 class="center-align col s12 white-text" translate="landing.sub-title"></h6>
-                </div>
-            </div>
-            <div class="row"><div class="col s4 hide-on-med-and-down">&nbsp;</div></div>
-            <div class="row"><div class="col s4 hide-on-med-and-down">&nbsp;</div></div>
-            <div class="row">
-                <div class="col s4 ">&nbsp;</div>
-                <div class="col s4 center accent-color">
-                    <a href="https://play.google.com/apps/testing/com.qaobee.hand" target="_blank"
-                       class="white-text">
-                        <h5 translate="landing.calltoaction"></h5>
-                    </a>
-                </div>
-                <div class="col s4 ">&nbsp;</div>
-            </div>
+
+<div class="home section center-align dark-primary-color" id="contact">
+    <div class="row">
+        <h4 class="white-text" translate="landing.connect"></h4>
+        <div class="center col s12">
+            <ul class="social-icons">
+                <li><a href="https://twitter.com/Qaobee" target="_blank" class="accent-text-color"><i
+                        class="fa fa-twitter-square fa-fw"></i><br/><span class="white-text">Twitter</span></a></li>
+                <li><a href="https://www.facebook.com/qaobee" target="_blank" class="accent-text-color"><i
+                        class="fa fa-facebook-square fa-fw"></i><br/><span class="white-text">Facebook</span></a></li>
+                <li><a href="https://plus.google.com/+Qaobee/about" target="_blank" class="accent-text-color"><i
+                        class="fa fa-google-plus-square fa-fw"></i><br/><span class="white-text">Google +</span></a></li>
+                <li><a href="mailto:contact@qaobee.com" class="accent-text-color"><i
+                        class="fa fa-envelope-square fa-fw"></i><br/><span class="white-text">E-mail</span></a></li>
+                <li><a href="javascript:void(0);" data-target="modalSubMailingList" class="accent-text-color"><i
+                        class="fa fa-fw fa-pencil-square"></i><br/><span class="white-text">Newsletter</span></a></li>
+            </ul>
+
         </div>
     </div>
 </div>
--->
